# dna-analyser-ibp

./: .gitignore  .gitlab-ci.yml  .releaserc.yml  CHANGELOG.MD  LICENSE  MANIFEST.in  Pipfile  README.MD  README.md  Untitled.ipynb  pyproject.toml  setup.py
.github/workflows/: github-action-pipeline.yml  github-action-release.yml  github-action-tests.yml
DNA_analyser_IBP/: __init__.py  api.py  batch_statuses.py  config.py  singleton.py  statusbar.py  type.py  utils.py
DNA_analyser_IBP/adapters/: __init__.py  base_adapter.py  batch_adapter.py  cpg_adapter.py  g4hunter_adapter.py  g4killer_adapter.py  p53_adapter.py  rloopr_adapter.py  sequence_adapter.py  user_adapter.py  validations.py  zdna_adapter.py
DNA_analyser_IBP/callers/: __init__.py  analyse_caller.py  batch_caller.py  g4hunter_caller.py  g4killer_caller.py  p53_caller.py  sequence_caller.py  user_caller.py
DNA_analyser_IBP/interfaces/: __init__.py  analyse_interface.py  cpg_interface.py  extras_interface.py  g4hunter_interface.py  g4killer_interface.py  intersection.py  p53_interface.py  rloopr_interface.py  sequence_interface.py  tool_interface.py  zdna_interface.py
DNA_analyser_IBP/intersection/: __init__.py  annotation.py  g4_result.py  g4hunter.py
DNA_analyser_IBP/models/: __init__.py  analyse.py  base.py  batch.py  cpg.py  g4hunter.py  g4killer.py  p53.py  rloopr.py  sequence.py  user.py  zdna.py
DNA_analyser_IBP/ports/: __init__.py  batch_port.py  cpg_port.py  g4hunter_port.py  g4killer_port.py  p53_port.py  port.py  rloopr_port.py  sequence_port.py  user_port.py  zdna_port.py
docs/: DNA_analyser_IBP.callers.md  DNA_analyser_IBP.interfaces.md  DNA_analyser_IBP.md  index.md  modules.md
docs/source/: DNA_analyser_IBP.callers.rst  DNA_analyser_IBP.interfaces.rst  DNA_analyser_IBP.rst  conf.py  index.rst  modules.rst
example/: FASTA_analyser_tutorial.ipynb  acid_anotations.csv  acid_inter_base.csv  acid_inter_tuned.csv  acid_result.csv  all_commands_example.ipynb  analysis_example.ipynb  csv_analyser_tutorial.ipynb  example_genomes.csv  example_test_script-checkpoint.ipynb  example_test_script.ipynb
example/annotations/: melanogaster_5.txt
example/annotations_parsed/: melanogaster_1.csv  melanogaster_2.csv  melanogaster_3.csv  melanogaster_4.csv  melanogaster_5.csv
example/g4_results/: melanogaster_2_result.csv  melanogaster_5_result.csv
example/overlay/: melanogaster_1.csv  melanogaster_2.csv  melanogaster_3.csv  melanogaster_4.csv  melanogaster_5.csv
tests/: __init__.py  g4hunter_test.py  g4killer_test.py  multifasta.txt  p53_test.py  sequence.txt  sequence_test.py  user_test.py  utils_test.py
tests/test_adapters/: g4hunter_adapter_test.py  g4killer_adapter_test.py  p53_adapter_test.py  rloop_adapter_test.py  sequence_adapter_test.py  user_adapter_test.py
tests/test_adapters/sequence_samples/: fasta_sample.txt
tests/test_models/: batch_model_test.py  g4hunter_model_test.py  g4killer_model_test.py  p53_model_test.py  rloopr_model_test.py  sequence_model_test.py
tests/test_utils/: utils_test.py
tests/vcr/cassettes/: host  load_first_g4  test_exporting_g4analyse_to_csv  test_g4_hunter_creation_and_deleting  test_g4hunter_fail_delete  test_g4killer_creation  test_load_all_g4hunters  test_load_all_sequence_filtered  test_load_all_sequence_not_filtered  test_load_filtered_g4hunters  test_load_g4hunter_by_id  test_load_sequence_by_id  test_load_sequence_by_wrong_id  test_loading_sequence_data  test_p53_creation  test_sequence_fail_delete  test_sequence_ncbi_creation_and_deleting  test_sequence_text_creation_and_deleting  user
