[tool.poetry]
name = "DNA_analyser_IBP"
version = "3.6.0"
description = "DNA analyser API wrapper tool for Jupiter notebooks."
authors = ["Patrik Kaura <patrikkaura@gmail.com>"]
readme = "README.md"
license = "GPL-3.0-or-later"
homepage = "http://bioinformatics.ibp.cz/"
repository = "https://github.com/patrikkaura/dna-analyser-ibp"
documentation = "https://github.com/patrikkaura/dna-analyser-ibp/"
keywords = ["DNA", "g4hunter", "g4killer", "p53"]
classifiers=[
        "Intended Audience :: Education",
        "Intended Audience :: Science/Research",
        "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
        "Operating System :: OS Independent",
        "Programming Language :: Python",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.6",
        "Programming Language :: Python :: 3.7",
        "Programming Language :: Python :: 3.8",
        "Topic :: Scientific/Engineering :: Bio-Informatics",
]
packages = [{ include = "DNA_analyser_IBP" }]

[tool.poetry.dependencies]
python = "^3.10"
requests = "2.31.0"
pandas = "2.0.0"
tqdm = "4.66.0"
pyjwt = "2.8.0"
matplotlib = "3.7.2"
requests-toolbelt = "1.0.0"
tenacity = "8.2.3"

[tool.poetry.dev-dependencies]
pytest = "7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
